Verion 0.9.45dev (?? ??? 2004)
  - Added support for category icons.  No Admin UI yet.  Icons should
    be in icons subdirectory named by the category id, such as
    "icons/cat-1.gif", etc.  If the category gif file is found, it
    will be used.
  - Added patch 1076313: Added support for HTMLAREA (see www.htmlarea.com)
    HTMLAREA is a WYSIWYG editor for HTML.
    This can be enabled in the Full Description by enabling
    HTML for full descrpitions in system settings and then installing
    the HTMLAREA files on the server.  There should be a file
    called .../includes/htmlarea/htmlarea.php when you have unzipped
    the files.
    (Thanks, Ray for this patch!)
  - Added "printer friendly" link in view event page
  - Updated admin docs to reflect updated info in readme.html & removed
  duplicate info from readme.html
  - Standardized styling for all documentation
  - Put developers notes within php tags for javascript files (less data sent
  to browser)
  - Added title attributes to links
  - Adding labels for form fields
  - Fixed bug 1071619: today border in view_t.php
  - Applied patch 1068220: implementing styles.php in week.php
  - Adjusting iframe height & adding title for editing/adding non-users
  - Enhanced iframe to parent frame refresh behavior for form submittal in new tabbed gui
  - Implemented "main" class in all veiws to hopefully resolve custom header issue
  - Added styles for login.php
  - Moved common tabs js to includes/js/visible.php instead of repeating it
  for each page with tabs
  - Removed links in trailer for assistants, and managing views & reports
  - Modified setting of db parameters.  They are now stored in a data
    file "includes/settings.php".
    When someone tries to access WebCalendar for the first time and this
    file is not found, the user is redirected to a new dbinstall page
    (install/index.php) where the user can set db host/user/password.